working on fixing the padding bottom on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ h3 {
 @media (max-width: 1020px) {
     #title {
         text-align: center;
+        padding-bottom: 6%;
     }
     .title-image {
         position: static;
